--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1807,6 +1807,33 @@ Huawei:
       model: 'Ascend D1'
     - regex: 'U9508[);/ ]'
       model: 'Honor 2'
+
+    - regex: 'P9|EVA-L19'
+      model: 'P9'
+    - regex: 'VNS-L31|VNS-L21|VNS-L22|VNS-L23|VNS-L53|PRA-LA1|PRA-LX2|PRA-LX1|PRA-LX3'
+      model: 'P9 Lite'
+    - regex: 'SLA-L22'
+      model: 'P9 Lite Mini'
+    - regex: 'VIE-AL10|VIE-L09'
+      model: 'P9 Plus'
+    - regex: 'VTR-L09|VTR-AL00|VTR-TL00|VTR-L29'
+      model: 'P10'
+    - regex: 'WAS-L03T|WAS-LX1|WAS-LX1A|WAS-LX2|WAS-LX2J|WAS-LX3'
+      model: 'P10 Lite'
+    - regex: 'VKY-L09|VKY-AL00|VKY-L29'
+      model: 'P10 Plus'
+    - regex: 'EML-L09|EML-L09C|EML-L29|EML-AL00'
+      model: 'P20'
+    - regex: 'ANE-AL00|ANE-TL00'
+      model: 'P20 Lite'
+    - regex: 'CLT-L04|CLT-L09|CLT-L09C|CLT-L29|CLT-L29C|CLT-AL00|CLT-AL01'
+      model: 'P20 Lite'
+
+    - regex: 'MHA-L29|LON-L29|LON-L29'
+      model: 'Mate 9'
+    - regex: 'ALP-L09|ALP-L29|BLA-L09|BLA-L29'
+      model: 'Mate 10'
+
     - regex: 'CHE2?-[UT]L00[HM]?|CHE1-CL[12]0|CHE2-L11'
       model: 'Honor 4X'
     - regex: 'CHM-[CUT]L00[HM]?'
@@ -2657,8 +2684,7 @@ Mofut:
 
 # motorola
 Motorola:
-  regex: 'MOT|(?<!AN)DROID ?(?:Build|[a-z0-9]+)|portalmmm/2.0 (?:E378i|L6|L7|v3)|XOOM [^;/]*Build|(?:XT|MZ|MB|ME)[0-9]{3,4}[a-z]?(?:\(Defy\))?(?: Build|\))'
-  device: 'smartphone'
+  regex: 'MOT|DROID ?(?:Build|[a-z0-9]+)|portalmmm/2.0 (?:E378i|L6|L7|v3)|XOOM [^;/]*Build|(?:XT|MZ|MB|ME)[0-9]{3,4}[a-z]?(?:\(Defy\))?(?: Build|\))'
   models:
     # Explicit feature phone models
     - regex: 'MOT-V360'
@@ -2749,9 +2775,9 @@ Motorola:
       model: 'RIZR $1'
     - regex: 'MOT(?!OROLA)[O]?[_\-]?([a-z0-9.]+)'
       model: '$1'
-    - regex: '(?<!AN)DROID ?([a-z0-9 ]*) Build'
+    - regex: 'DROID ?([a-z0-9 ]*) Build'
       model: 'DROID $1'
-    - regex: '(?<!AN)DROID ?([a-z0-9]+)'
+    - regex: 'DROID ?([a-z0-9]+)'
       model: 'DROID $1'
     - regex: 'portalmmm/2.0 ((?:E378i|L6|L7|V3)[a-z0-9]+)'
       model: '$1'
@@ -3457,6 +3483,26 @@ Samsung:
       model: 'GALAXY S5 Dual-SIM'
     - regex: '(?:SAMSUNG-)?SM-G900|GALAXY-S5'
       model: 'GALAXY S5'
+    - regex: '(?:SAMSUNG-)?SM-G920|SM-G890|SM-G9200|GALAXY-S6|SC-05G'
+      model: 'GALAXY S6'
+    - regex: '(?:SAMSUNG-)?SM-G925|SM-G928|SC-04G'
+      model: 'GALAXY S6 Edge'
+    - regex: '(?:SAMSUNG-)?SM-G928'
+      model: 'GALAXY S6 Edge+'
+    - regex: '(?:SAMSUNG-)?SM-G930'
+      model: 'GALAXY S7'
+    - regex: '(?:SAMSUNG-)?SM-G935'
+      model: 'GALAXY S7 Edge'
+    - regex: '(?:SAMSUNG-)?SM-G891A'
+      model: 'GALAXY S7 Active'
+    - regex: '(?:SAMSUNG-)?SM-G950'
+      model: 'GALAXY S8'
+    - regex: '(?:SAMSUNG-)?SM-G955'
+      model: 'GALAXY S8+'
+    - regex: '(?:SAMSUNG-)?SM-G960'
+      model: 'GALAXY S9'
+    - regex: '(?:SAMSUNG-)?SM-G965'
+      model: 'GALAXY S9+'
     - regex: '(?:SAMSUNG-)?SCH-I200'
       model: 'GALAXY Stellar'
     - regex: '(?:SAMSUNG-)?SCH-I829'
@@ -3611,7 +3657,7 @@ Smartfren:
   device: 'smartphone'
   models:
     # explicit tablet models
-    - regex: 'S7 Build'
+    - regex: '7 Build'
       model: 'Andromax Tab 7.0'
       device: 'tablet'
 
