--- a/regexes/client/mediaplayers.yml
+++ b/regexes/client/mediaplayers.yml
@@ -24,6 +24,10 @@
 - regex: 'FlyCast(?:/([\d\.]+))?'
   name: 'FlyCast'
   version: '$1'
+  
+- regex: 'foobar2000(?:/([\d\.]+))?'
+  name: 'Foobar2000'
+  version: '$1'
 
 - regex: 'MediaMonkey(?:[ /](\d+[\.\d]+))?'
   name: 'MediaMonkey'
@@ -53,7 +57,7 @@
   name: 'SubStream'
   version: '$1'
 
-- regex: 'VLC(?:/([\d\.]+))?'
+- regex: '(?:Lib)?VLC(?:/([\d\.]+))?'
   name: 'VLC'
   version: '$1'
 
