"Añadidos iPhones, iPads & LGs"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -59,25 +59,35 @@ HTC:
   models:
     # explicit mobile models
     - regex: 'XV6975[);/ ]'
-      model: 'Imagio'
+      marketingName: 'Imagio'
+      model: 'XV6975'
     - regex: 'PG86100[);/ ]'
-      model: 'Evo 3G'
+      marketingName: 'Evo 3G'
+      model: 'PG86100'
     - regex: 'PC36100[);/ ]'
-      model: 'Evo 4G'
+      marketingName: 'Evo 4G'
+      model: 'PC36100'
     - regex: 'PJ83100[);/ ]'
-      model: 'One X'
+      marketingName: 'One X'
+      model: 'PJ83100'
     - regex: 'ADR6300'
-      model: 'Droid Incredible'
+      marketingName: 'Droid Incredible'
+      model: 'ADR6300'
     - regex: 'ADR6400L'
-      model: 'ThunderBolt'
+      marketingName: 'ThunderBolt'
+      model: 'ADR6400L'
     - regex: 'ADR6410LRA'
-      model: 'Droid Incredible 3'
+      marketingName: 'Droid Incredible 3'
+      model: 'ADR6410LRA'
     - regex: 'SPV E600'
-      model: 'Excalibur'
+      marketingName: 'Excalibur'
+      model: 'SPV E600'
     - regex: 'SPV E650'
-      model: 'Vox'
+      marketingName: 'Vox'
+      model: 'SPV E650'
     - regex: 'X525a'
-      model: 'One X+'
+      marketingName: 'One X+'
+      model: 'X525a'
 
     - regex: 'NexusHD2' # custom rom for hd2
       model: 'HD2'
@@ -131,23 +141,32 @@ Microsoft:
       model: 'Kin $1'
 
     - regex: 'RM-1031'
-      model: 'Lumia 532'
+      marketingName: 'Lumia 532'
+      model: 'RM-1031'
     - regex: 'RM-106[57]'
-      model: 'Lumia 640 XL'
+      marketingName: 'Lumia 640 XL'
+      model: 'RM-1065/7'
     - regex: 'RM-109[02]'
-      model: 'Lumia 535'
+      marketingName: 'Lumia 535'
+      model: 'RM-1090/2'
     - regex: 'RM-1099'
+      marketingName: 'RM-1109'
       model: 'Lumia 430'
-    - regex: 'RM-1109'
-      model: 'Lumia 640'
+    - regex: 'RM-1099'
+      marketingName: 'Lumia 640'
+      model: 'RM-1099'
     - regex: 'RM-1114'
-      model: 'Lumia 435'
+      marketingName: 'Lumia 435'
+      model: 'RM-1114'
     - regex: 'RM-1127'
-      model: 'Lumia 550'
+      marketingName: 'Lumia 550'
+      model: 'RM-1127'
     - regex: 'RM-1141'
-      model: 'Lumia 540'
+      marketingName: 'Lumia 540'
+      model: 'RM-1141'
     - regex: 'RM-1154'
-      model: 'Lumia 650'
+      marketingName: 'Lumia 650'
+      model: 'RM-1154'
 
     - regex: 'Microsoft; Lumia ([^;/)]+)[;/)]'
       model: 'Lumia $1'
@@ -287,101 +306,133 @@ Apple:
   models:
     # specific mobile devices
     - regex: '(?:Apple-)?iPh(?:one)?1[C,]1'
+      marketingName: 'iPhone'
       model: 'iPhone'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?1[C,]2'
+      marketingName: 'iPhone 3G'
       model: 'iPhone 3G'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?2[C,]1'
+      marketingName: 'iPhone 3GS'
       model: 'iPhone 3GS'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?3[C,][123]'
+      marketingName: 'iPhone 4'
       model: 'iPhone 4'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?4[C,]1'
+      marketingName: 'iPhone 4S'
       model: 'iPhone 4S'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?5[C,][12]'
+      marketingName: 'iPhone 5'
       model: 'iPhone 5'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?5[C,][34]'
+      marketingName: 'iPhone 5C'
       model: 'iPhone 5C'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?6[C,][12]'
+      marketingName: 'iPhone 6'
       model: 'iPhone 5S'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?7[C,]1'
+      marketingName: 'iPhone 6 Plus'
       model: 'iPhone 6 Plus'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?7[C,]2'
+      marketingName: 'iPhone 6'
       model: 'iPhone 6'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?8[C,]1'
+      marketingName: 'iPhone 6s'
       model: 'iPhone 6s'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?8[C,]2'
+      marketingName: 'iPhone 6s Plus'
       model: 'iPhone 6s Plus'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?8[C,]4'
+      marketingName: 'iPhone SE'
       model: 'iPhone SE'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?9[C,][13]'
+      marketingName: 'iPhone 7'
       model: 'iPhone 7'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?9[C,][24]'
+      marketingName: 'iPhone 7 Plus'
       model: 'iPhone 7 Plus'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?10[C,][14]'
+      marketingName: 'iPhone 8'
       model: 'iPhone 8'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?10[C,][25]'
+      marketingName: 'iPhone 8 Plus'
       model: 'iPhone 8 Plus'
       device: 'mobile'
     - regex: '(?:Apple-)?iPh(?:one)?10[C,][36]'
+      marketingName: 'iPhone X'
       model: 'iPhone X'
       device: 'mobile'
 
     # specific tablet devices
     - regex: '(?:Apple-)?iPad1[C,]1'
+      marketingName: 'iPad'
       model: 'iPad'
       device: 'tablet'
-    - regex: '(?:Apple-)?iPad2[C,][1234]'
+    - regex: '(?:Apple-)?iPad2[C,][123]'
+      marketingName: 'iPad 2'
       model: 'iPad 2'
       device: 'tablet'
-    - regex: '(?:Apple-)?iPad2[C,][567]'
-      model: 'iPad Mini'
+    - regex: '(?:Apple-)?iPad2[C,][45]'
+      marketingName: 'iPad 2 Mini'
+      model: 'iPad 2 Mini'
       device: 'tablet'
-    - regex: '(?:Apple-)?iPad3[C,][123]'
+    - regex: '(?:Apple-)?iPad3[C,][12]'
+      marketingName: 'iPad 3'
       model: 'iPad 3'
       device: 'tablet'
-    - regex: '(?:Apple-)?iPad3[C,][456]'
+    - regex: '(?:Apple-)?iPad3[C,][34]'
+      marketingName: 'iPad 4'
       model: 'iPad 4'
       device: 'tablet'
-    - regex: '(?:Apple-)?iPad4[C,][123]'
+    - regex: '(?:Apple-)?iPad4[C,][12]'
+      marketingName: 'iPad Air'
       model: 'iPad Air'
       device: 'tablet'
-    - regex: '(?:Apple-)?iPad4[C,][456]'
+    - regex: '(?:Apple-)?iPad4[C,][45]'
+      marketingName: 'iPad Mini 2'
       model: 'iPad Mini 2'
       device: 'tablet'
     - regex: '(?:Apple-)?iPad4[C,][789]'
+      marketingName: 'iPad Mini 3'
       model: 'iPad Mini 3'
       device: 'tablet'
     - regex: '(?:Apple-)?iPad5[C,][12]'
+      marketingName: 'iPad Mini 4'
       model: 'iPad Mini 4'
       device: 'tablet'
     - regex: '(?:Apple-)?iPad5[C,][34]'
+      marketingName: 'iPad Air 2'
       model: 'iPad Air 2'
       device: 'tablet'
     - regex: '(?:Apple-)?iPad6[C,][34]'
+      marketingName: 'iPad Pro 9.7'
       model: 'iPad Pro 9.7'
       device: 'tablet'
     - regex: '(?:Apple-)?iPad6[C,][78]'
+      marketingName: 'iPad Pro 12.9'
       model: 'iPad Pro 12.9'
       device: 'tablet'
     - regex: '(?:Apple-)?iPad7[C,][12]'
+      marketingName: 'iPad Pro 2 12.9'
       model: 'iPad Pro 2 12.9'
       device: 'tablet'
     - regex: '(?:Apple-)?iPad7[C,][34]'
+      marketingName: 'iPad Pro 10.5'
       model: 'iPad Pro 10.5'
       device: 'tablet'
 
